--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script>
         let galleries = document.querySelectorAll('.gallery')
         let A = new Gallery(galleries[0], {size: '40%', url: 'https://campaigns.celtra.com/developer-tasks/swipey-gallery/', looping: true})
-        let B = new Gallery(galleries[1], {size: '40%', url: 'https://campaigns.celtra.com/developer-tasks/swipey-gallery/', looping: false})
+        let B = new Gallery(galleries[1], {size: '40%', url: 'http://campaigns.celtra.com/developer-tasks/swipey-gallery/', looping: false})
         let C = new Gallery(galleries[2], {size: '40%', url: 'https://campaigns.celtra.com/developer-tasks/swipey-gallery/', looping: true})
     </script>
 </body>
